<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_gap"
        android:padding="@dimen/default_gap"
        app:alignmentMode="alignBounds"
        app:columnCount="2"
        app:rowCount="10"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="55dp">

        <ImageView
            android:id="@+id/diceimg1"
            android:layout_width="68dp"
            android:layout_height="80dp"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/placeholder"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="center"
            app:layout_row="0"
            app:layout_rowSpan="1" />

        <TextView
            android:id="@+id/divevalue1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/dice_value_desc"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="center_horizontal"
            app:layout_row="1" />

        <SeekBar
            android:id="@+id/sidebar1"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sidebar_desc"
            android:max="5"
            android:progress="2"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal|center"
            app:layout_row="3" />

        <TextView
            android:id="@+id/sides_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sides_text_desc"
            android:text="@string/side_text"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            android:id="@+id/guesses_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/guesses_text_desc"
            android:text="@string/guess_text"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            android:id="@+id/sidevalue1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/side_value_desc"
            app:layout_column="1"
            app:layout_row="2" />

        <EditText
            android:id="@+id/guessesvalue1"
            android:layout_width="65dp"
            android:layout_height="35dp"
            android:contentDescription="@string/guesses_value_desc"
            android:ems="10"
            android:inputType="number"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="5dp"
            app:layout_column="1"
            app:layout_row="4" />

        <TextView
            android:id="@+id/probability_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/probability_text_desc"
            android:text="@string/prob_text"
            app:layout_column="0"
            app:layout_row="6" />

        <TextView
            android:id="@+id/probability_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/probability_value_desc"
            app:layout_column="1"
            app:layout_row="6" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/button_desc"
            android:text="@string/roll_text"
            app:layout_column="0"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal"
            app:layout_row="7" />

        <TextView
            android:id="@+id/guessresult"
            android:layout_width="101dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/guess_result_desc"
            android:text="@string/correct_guess_text"
            android:textColor="#FFFF0000"
            app:layout_gravity="center_horizontal" />

    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>